[FRONT] create button to add an incident

--- a/front/src/components/ListIncidentPage/style.css
+++ b/front/src/components/ListIncidentPage/style.css
@@ -1,25 +1,25 @@
-.listIncidentWrapper {
-
-}
-
 .listIncidentWrapper .header{
     margin-bottom: 100px;
 }
 
-.listIncidentWrapper span {
+.listIncidentWrapper .header span {
     display: table-cell;
     vertical-align: middle;
 }
 
-.listIncidentWrapper .image{
+.listIncidentWrapper .header .image{
     margin-right: 80px;
 }
 
-.listIncidentWrapper .title{
+.listIncidentWrapper .header .title{
     font-weight: bold;
     font-size: 30px;
     padding-left: 100px;
     color: #32d8f6;
+}
+
+.listIncidentWrapper .addButton {
+    margin-bottom: 40px;
 }
 
 .listIncidentWrapper table th{
